<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:id="@+id/addReminder"
android:background="@color/black"
tools:context=".AddReminder">


    <ScrollView
        android:layout_width="391dp"
        android:layout_height="698dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/titleLabel"
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppinsmedium"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:text="@string/title" />

                <EditText
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/poppinsmedium"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/placeholderColor"
                    android:hint="@string/titlePlaceholder"
                    android:inputType="text"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/descLabel"
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppinsmedium"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:text="@string/desc" />

                <EditText
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/poppinsmedium"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/placeholderColor"
                    android:hint="@string/descPlaceholder"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/locationLabel"
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppinsmedium"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:text="@string/location" />

                <EditText
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/poppinsmedium"
                    android:textSize="17sp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/placeholderColor"
                    android:hint="@string/locationPlaceholder"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/selectDateTime"
                    android:layout_marginEnd="10dp"/>

                <TextView
                    android:id="@+id/dateTimeLabel"
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppinsmedium"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:text="12:12 AM" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/imageLabel"
                        android:layout_width="113dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppinsmedium"
                        android:textSize="17sp"
                        android:textColor="@color/white"
                        android:text="@string/extra" />

                    <Button
                        android:id="@+id/uploadImg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppinsmedium"
                        android:text="@string/upload" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    tools:srcCompat="@tools:sample/avatars" />

            </LinearLayout>

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/save" />

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>