<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addAlarmActivity"
    android:background="@color/black"
    tools:context=".AddAlarm">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:paddingStart="45dp"
            android:paddingEnd="45dp">

            <TextView
                android:id="@+id/labelTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsmedium"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/time"
                android:textAlignment="center"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/timeText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/underline"
                android:ems="10"
                android:fontFamily="@font/poppinsbold"
                android:inputType="time"
                android:text="12:12 PM"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <Button
                android:id="@+id/selectTime"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:background="@color/addBtns"
                android:fontFamily="@font/poppinsmedium"
                android:gravity="center"
                android:text="@string/selectTme"
                android:textAlignment="center"
                android:textSize="17sp"
                tools:ignore="MissingConstraints,NotSibling" />

            <Button
                android:id="@+id/setAlarm"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:background="@color/addBtns"
                android:fontFamily="@font/poppinsmedium"
                android:gravity="center"
                android:text="@string/setAlarm"
                android:textAlignment="center"
                android:textSize="17sp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/cancelAlarm"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/addBtns"
                android:fontFamily="@font/poppinsmedium"
                android:gravity="center"
                android:text="@string/cancelAlarm"
                android:textAlignment="center"
                android:textSize="17sp"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>